src/z80asm/z80asm2/t/30-directive/expected/include_23.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/include_23.asm
Assembling t/30-directive/input/include_23.asm...
t/30-directive/input/include_23.asm:1:28: error: Unexpected token after INCLUDE: extra
    include file_not_found.inc extra
                               ^
t/30-directive/input/include_23.asm:1:9: error: File not found: file_not_found.inc
    include file_not_found.inc extra
            ^
